<resources>
    <string name="app_name">RPG</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_generate">GenerateActivity</string>
    <string name="generate_password">Generate My Password</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="user_university">University</string>
    <string name="user_occupation">Occupation</string>
    <string name="user_address">Address</string>
    <string name="favourite_animal">Your Favourite Animal</string>
    <string name="website_name">Website* </string>
    <string name="pass_length">Enter the required password length*</string>
    <string name="title_activity_new_password">NewPasswordActivity</string>
    <string name="title_activity_password_list">PasswordListActivity</string>
</resources>
